--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "i18next": "^22.5.1",
     "next": "13.4.4",
+    "next-i18next": "^13.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "sass": "^1.63.2"
   }
 }
