--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
+    "react-intersection-observer": "^9.4.4",
+    "react-scrollspy": "^3.4.3",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
