--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^12.3.1",
     "react-intersection-observer": "^9.4.4",
     "react-scrollspy": "^3.4.3",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
