--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
+    "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "i18next": "^22.5.1",
@@ -21,6 +24,7 @@
     "react-i18next": "^12.3.1",
     "react-intersection-observer": "^9.4.4",
     "react-scrollspy": "^3.4.3",
+    "react-toastify": "^9.1.3",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2"
   },
