--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
-    "antd": "^5.6.1",
+    "antd": "5.0.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
